--- a/css/indexStylesheet.css
+++ b/css/indexStylesheet.css
@@ -1,1 +1,63 @@
-blank css file 
+body {
+    background-color:rgb(218, 218, 218);
+}
+
+header {
+    padding-top:2px;
+    outline:darkslategray;
+    outline-style:double;
+    
+    background-color:rgb(204, 204, 204);
+}
+
+#titleWrapper h1 {
+    background-color:blanchedalmond;
+    padding-bottom: 1px;
+    margin-bottom: 0px;
+}
+
+#titleWrapper p {
+    margin-top: 0px;
+    background-color: bisque;
+}
+
+nav li {
+    display:inline;
+    
+    list-style-type:none;
+}
+
+.arbitraryThings {
+    outline:darkslateblue;
+    outline-style:inset;
+
+    background-color:beige;
+}
+
+#arbitraryImageWrapper {
+    display:grid;
+    grid-template-columns: 1f 1f 1f;
+    grid-gap: 20px;
+}
+
+#arbitraryImageLeft {
+    grid-row:1;
+    grid-column:1;
+}
+
+.arbitraryImage {
+    outline:auto;
+    outline-color:burlywood;
+    outline-style:groove;
+    grid-row:1;
+    grid-column:2;
+}
+
+#arbitraryImageRight {
+    grid-row:1;
+    grid-column:3;
+}
+
+.hiddenUntilMouseOver {
+    display:none;
+}
