--- a/css/indexStylesheet.css
+++ b/css/indexStylesheet.css
@@ -1,4 +1,5 @@
 body {
+    padding:3px;
     background-color:rgb(218, 218, 218);
 }
 
@@ -21,9 +22,12 @@ header {
     background-color: bisque;
 }
 
+nav {
+    background-color:bisque;
+}
+
 nav li {
     display:inline;
-    
     list-style-type:none;
 }
 
@@ -31,7 +35,7 @@ nav li {
     outline:darkslateblue;
     outline-style:inset;
 
-    background-color:beige;
+    background-color:burlywood;
 }
 
 #arbitraryImageWrapper {
@@ -58,6 +62,13 @@ nav li {
     grid-column:3;
 }
 
-.hiddenUntilMouseOver {
-    display:none;
+.contentWrapper {
+   padding:3px;
+   background-color:rgb(230, 195, 150);
+
+   transition: background-color 2s;
+}
+
+.contentWrapper:hover {
+    background-color:rgb(199, 170, 132);
 }
